# FourierDepthOfField

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: api.md  final.md  milestone.md
docs/plans/: week8.md
include/quasi_sampler/: README.md  example.cpp  example2.cpp  example3.cpp  quasisampler_prototype.h
script/: generate_header.py
src/fdof/intern/engine/: Engine.cpp
src/fdof/intern/image/: Image.cpp
src/fdof/intern/light/: Light.cpp
src/fdof/intern/material/: Material.cpp
src/fdof/intern/object/: Object.cpp
src/fdof/intern/scene/: Camera.cpp
src/fdof/intern/utility/: Color.cpp  Intersection.cpp
src/intern/engine/: DepthTracer.cpp  DiscontinuityTracer.cpp  Engine.cpp  FDOFBenchmark.cpp  FDOFTracer.cpp  PathTracer.cpp  PathTracerBenchmark.cpp  QuasiSampler.cpp  RaySample.cpp  RenderEngine.cpp  SpatialDensitySampler.cpp
src/intern/image/: Image.cpp
src/intern/light/: DirectLight.cpp  Light.cpp
src/intern/material/: Lambert.cpp  Material.cpp
src/intern/object/: BoxTreeObject.cpp  Cube.cpp  MeshObject.cpp  Object.cpp  Triangle.cpp
src/intern/scene/: BoxTree.cpp  Camera.cpp  Scene.cpp
src/intern/utility/: BoundingBox.cpp  Color.cpp  Intersection.cpp  Random.cpp  Ray.cpp  Sampler.cpp  Spectrum.cpp  SpectrumRay.cpp  Transform.cpp  Vertex.cpp
src/raytracer/intern/animation/: Animatable.cpp  Keyframe.cpp
src/raytracer/intern/camera/: Camera.cpp
src/raytracer/intern/engine/: PathTracer.cpp  RayTracer.cpp  RenderEngine.cpp
src/raytracer/intern/image/: Bitmap.cpp  Image.cpp
src/raytracer/intern/light/: AreaLight.cpp  DirectionalLight.cpp  Light.cpp  PointLight.cpp  SpotLight.cpp
src/raytracer/intern/material/: Ashikhmin.cpp  Dielectric.cpp  Lambert.cpp  Luminance.cpp  Material.cpp  Metal.cpp
src/raytracer/intern/module/: StopWatch.cpp
src/raytracer/intern/object/: BoxTreeObject.cpp  CircularCloner.cpp  Cloner.cpp  Cube.cpp  Cylinder.cpp  GridCloner.cpp  InstanceObject.cpp  MeshCube.cpp  MeshObject.cpp  Object.cpp  Plane.cpp  Sphere.cpp  Sun.cpp  Triangle.cpp
src/raytracer/intern/scene/: Scene.cpp
src/raytracer/intern/util/: BoundingBox.cpp  Color.cpp  Intersection.cpp  Orientable.cpp  Random.cpp  Ray.cpp  Sampler.cpp  Transform.cpp  Vertex.cpp
test/: CMakeLists.txt  basic.cpp  cubes.cpp  cubes_benchmark.cpp  cubes_coc.cpp  cubes_depth.cpp  cubes_discont.cpp  cubes_fdof.cpp  cubes_ground_truth.cpp  depth.cpp  dragon_fdof.cpp  dragon_ground_truth.cpp  dragon_path_tracer.cpp  spectrum_test.cpp
web/: package-lock.json  package.json
web/data/: config.json
web/public/: error.html  milestone.html
web/public/css/: basic.css  sidebar.css
web/public/js/: basic.js
